# aki-prox

./: CMakeLists.txt  main.cpp  toolchain-mingw64.cmake
.github/workflows/: cmake-multi-platform.yml
libs/base64/: base64.cpp
scripts/: set-vars.sh  unset-vars.sh
sep/: Color.h  Logger.hpp  Manager.hpp  Parser.hpp  loader.h
